--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chalk": "~1.1.1",
     "co": "~4.6",
     "co-body": "~1.1.0",
-    "co-request": "~0.2.0",
+    "co-request": "^0.2.1",
     "commander": "~2.0.0",
     "detect-port": "~0.1.3",
     "koa": "~0.21.0",
@@ -37,6 +37,8 @@
     "reliable-github-oauth": "^1.0.0",
     "reliable-gitlab-oauth": "^1.0.0",
     "reliable-logger": "^1.0.7",
+    "reliable-mail": "^0.2.0",
+    "reliable-plugin": "^0.1.0",
     "validator": "~3.37.0",
     "xutil": "~1.0.0",
     "yamljs": "~0.2.4",
