--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reliable-master",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Distributed reliable continuous integration service.",
   "keywords": [
     "ci",
@@ -37,6 +37,7 @@
     "react": "~0.14.0",
     "react-dom": "~0.14.2",
     "redis": "~2.3.1",
+    "reliable-events": "^0.1.4",
     "reliable-github-oauth": "^1.0.0",
     "reliable-gitlab-oauth": "^1.0.0",
     "reliable-logger": "^1.0.7",
