--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "autod": "^3.0.1",
     "autod-egg": "^1.0.0",
     "concurrently": "4.0.1",
-    "cross-env": "^5.2.0",
     "debug": "^3.1.0",
     "egg-bin": "^4.3.5",
     "egg-mock": "^3.14.0",
@@ -33,20 +32,20 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production npm run db:migrate && eggctl start --port=9900 --title=egg-server-reliable-web",
+    "start": "NODE_ENV=production npm run db:migrate && eggctl start --port=9900 --title=egg-server-reliable-web",
     "stop": "eggctl stop --title=egg-server-reliable-web",
-    "dev:server": "npm run db:migrate && cross-env DEBUG=reliable* egg-bin dev",
+    "dev:server": "npm run db:migrate && DEBUG=reliable* egg-bin dev",
     "dev:view": "cd view && npm run dev",
     "dev": "concurrently \"npm run dev:view\" \"npm run dev:server\"",
     "test": "npm run db:prepare:test && npm run lint && npm run test-local",
     "test-local": "egg-bin test",
-    "test:debug": "cross-env DEBUG=reliable* egg-bin test",
+    "test:debug": "DEBUG=reliable* egg-bin test",
     "cov": "npm run db:prepare:test && egg-bin cov",
     "lint": "eslint . --fix",
     "ci": "npm run lint && npm run cov",
     "autod": "autod",
     "build:docker": "docker build --no-cache --pull -t macacajs/reliable-web .",
-    "db:prepare:test": "cross-env NODE_ENV=test npm run db:migrate:undo:all && cross-env NODE_ENV=test npm run db:migrate",
+    "db:prepare:test": "NODE_ENV=test npm run db:migrate:undo:all && NODE_ENV=test npm run db:migrate",
     "db:status": "sequelize db:migrate:status",
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo",
