--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.2.0",
+    "egg-static": "^2.1.1",
     "egg-validate": "^1.0.0",
     "lodash.get": "^4.4.2",
     "moment": "^2.22.2",
