--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,13 @@ install:
   - npm i npminstall && npminstall
 
 script:
+  - npm run docs:build
+  - cd ./docs_dist
+  - git init
+  - git add --all .
+  - git commit -m "Travis CI Auto Builder"
+  - git push --quiet --force https://$REPO_TOKEN@github.com/macacajs/reliable.git master:gh-pages
+  - cd ..
   - MYSQL_PORT=13306 npm run ci
 
 after_script:
