feat: remove unused

--- a/view/package.json
+++ b/view/package.json
@@ -13,16 +13,15 @@
     "document": "https://github.com/macacajs/reliable/tree/master/docs"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development",
-    "dev:test": "cross-env NODE_ENV=test webpack-dev-server --mode development",
+    "dev": "NODE_ENV=development webpack-dev-server --mode development",
+    "dev:test": "NODE_ENV=test webpack-dev-server --mode development",
     "serve": "npm run dev:test &",
     "test": "macaca run -d ./test",
     "lint": "eslint --fix . --ext jsx,js && stylelint --fix assets/**/*.less -s less",
-    "build": "cross-env NODE_ENV=production webpack -p --mode production",
+    "build": "NODE_ENV=production webpack -p --mode production",
     "build:report": "npm run build --report",
     "prepublishOnly": "npm run build",
-    "ci": "npm run lint && npm run build && npm run serve && npm test",
-    "contributor": "git-contributor"
+    "ci": "npm run lint && npm run build && npm run serve && npm test"
   },
   "precommit": [
     "lint"
@@ -43,13 +42,11 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-import": "^1.2.1",
     "babel-plugin-istanbul": "^5.0.1",
-    "cross-env": "^5.1.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.5.0",
     "eslint-config-antife": "^1.0.2",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.2.1",
-    "git-contributor": "^1.0.8",
     "less": "^2.7.2",
     "less-loader": "^4.1.0",
     "lodash.get": "^4.4.2",
