--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-antife": "^1.0.3",
     "eslint-config-egg": "^6.0.0",
     "git-contributor": "^1.0.8",
+    "husky": "^1.3.1",
     "macaca-ecosystem": "*",
     "mysql2": "^1.6.4",
     "sinon": "^6.1.4",
@@ -60,6 +61,11 @@
     "seed:generate": "sequelize seed:generate --name",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "repository": {
     "type": "git",
