--- a/view/package.json
+++ b/view/package.json
@@ -10,7 +10,7 @@
   ],
   "links": {
     "issues": "https://github.com/macacajs/reliable/issues?utf8=%E2%9C%93&q=",
-    "document": "https://github.com/macacajs/reliable/tree/master/docs"
+    "document": "https://macacajs.github.io/reliable"
   },
   "scripts": {
     "dev": "NODE_ENV=development webpack-dev-server --mode development",
